<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/pad_body"
    android:background="@color/app_fondo"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mrg_2"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_nivel_6"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="@dimen/pad_item"
            android:background="@color/item_seccion">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginRight="@dimen/mrg_2"
                android:src="@drawable/ic_logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_secc1_descripcion"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mrg_5"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mrg_2"
            android:text="@string/main_secc2_titulo"
            android:textSize="@dimen/sp_nivel_6"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mrg_2"
            android:text="@string/main_secc2_descripcion"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="360dp"
                android:layout_marginBottom="@dimen/mrg_2"
                android:src="@drawable/bosque"/>
            <Button
                android:id="@+id/btn_subir_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_subir_foto"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>